# argman

./: .clangd  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
include/: argman.hpp  utils.hpp
src/: argman.cppm
src/argman/: command.cppm  option.cppm  parser.cppm
test/: main.cpp
